# dab_my_project

./: CLAUDE.md  README.md  databricks.yml  issues_solved.md  pyproject.toml
design-specs/: ingestion_compute_req  ingestion_req_1
resources/: dab_my_project_etl.pipeline.yml  json_ingestion_job.job.yml  sample_job.job.yml  source_json_volume.volume.yml
src/: sample_notebook.ipynb
src/dab_my_project/: main.py
src/dab_my_project_etl/: README.md
src/dab_my_project_etl/transformations/: sample_trips_dab_my_project.py  sample_zones_dab_my_project.py
src/ingestion/dab_my_project_ingestion/: json_ingestion.py
src/utils/: log_formatter.py
tests/: conftest.py  json_ingestion_test.py  sample_taxis_test.py
